istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: outfitters-gateway
  namespace: backend
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtualservice
  namespace: backend
spec:
  hosts:
  - "*"
  gateways:
  - outfitters-gateway
  http:
    - name: auth
      match:
      - uri:
          prefix: /api/auth/
      - uri:
          prefix: /api/token/
      route:
      - destination:
          host: auth-microservice-svc.backend.svc.cluster.local
          port:
            number: 8000
    - name: user
      match:
      - uri:
          prefix: /user
      route:
      - destination:
          host: user-microservice-svc
          port:
            number: 8000
